# ez-scanner

./: CMakeLists.txt  README.md  scanner.cpp  test.txt
